--- a/P1000/题解.md
+++ b/P1000/题解.md
@@ -2,7 +2,7 @@
 
  #### *本题非常简单，只需要打印出来就行。`PHP`自然可以，但是`C++`也有简便做法。*
 
- 在`C++11`后，有一种字符串叫做**raw字符串**，**raw字符串**常量如下定义：
+ 在`C++11`后，有一种字符串叫做**raw字符串**，并支持cout输出，**raw字符串**常量如下定义：
 
  ```
 R"(字符串内容)"
