--- a/docs/小工具.md
+++ b/docs/小工具.md
@@ -280,7 +280,8 @@ void dfs(int now,int fa)
 std::gcd();
 std::lcm();
 ```
-### 欧拉筛+求质数个数（by `jjl_cxk`）
+### 质数筛
+#### 线性筛+求质数个数（by `jjl_cxk`）
 ```cpp
 int  prime[114000000],total;
 bool isPrime[114000000];
@@ -297,4 +298,329 @@ void seive( int Max  )
                    }
            }
   }
+```
+#### 线性筛
+```cpp
+inline void get_prime(int Mx){
+	vis[1]=true;
+	for(int i=2;i<=Mx;i++)
+	{
+		if(vis[i]==false)
+			primes.push_back(i);
+		for(int j=0;j<primes.size();j++)
+		{
+			int p=primes[j];
+			if(p*i>Mx)
+				break;
+			vis[p*i]=true;
+			if(i%p==0)
+				break;
+		}
+	}
+	return ;
+}
+```
+### 火车头函数（by `stostostoorzorzorz`）
+```cpp
+long long mod(long long x,long long p) { return x-(x/p)*p; }
+long long r(long long a,long long b) { return mod( (long long)(rand()*rand()) , b-a+1)+a; }
+long long random(long long a,long long b) { long long ra=r(a,b); for(int i=1;i<=N;i++) { ra=ra/r(a,b)*r(a,b); ra=ra%(b-a+1)+a; } return ra; }
+```
+### 快速幂（by `tmp_get_zip_diff`）
+```cpp
+inline int qpow(int x,int y,int p){
+	if(y==1)
+		return x;
+	int tmp=qpow(x,y>>1,p)%p;
+	if(y%2==0)
+		return (tmp*tmp)%p;
+	return ((tmp*tmp)%p*x)%p;
+}
+```
+### 数据结构模板
+#### 线段树（by `tmp_get_zip_diff`）
+```cpp
+inline void pushup(int cur){
+	tree[cur]=tree[cur<<1]+tree[(cur<<1)+1];
+	return ;
+}
+inline void build(int cur,int lt,int rt){
+	if(lt==rt)
+	{
+		tree[cur]=a[lt];
+		return ;
+	}
+	int mid=(lt+rt)>>1;
+	build(cur<<1,lt,mid);
+	build((cur<<1)+1,mid+1,rt);
+	pushup(cur);
+	return ;
+}
+inline void addtag(int cur,int lt,int rt,int val){
+	tree[cur]+=(rt-lt+1)*val;
+	tag[cur]+=val;
+	return ;
+}
+inline void pushdown(int cur,int lt,int rt){
+	if(tag[cur]==0)
+		return ;
+	int mid=(lt+rt)>>1;
+	addtag(cur<<1,lt,mid,tag[cur]);
+	addtag((cur<<1)+1,mid+1,rt,tag[cur]);
+	tag[cur]=0;
+	return ;
+}
+inline int query(int cur,int lt,int rt,int qx,int qy){
+	if(qy<lt||rt<qx)
+		return 0;
+	if(qx<=lt&&rt<=qy)
+		return tree[cur];
+	pushdown(cur,lt,rt);
+	int mid=(lt+rt)>>1;
+	return query(cur<<1,lt,mid,qx,qy)+query((cur<<1)+1,mid+1,rt,qx,qy);
+}
+inline void update(int cur,int lt,int rt,int qx,int qy,int val){
+	if(qy<lt||rt<qx)
+		return ;
+	if(qx<=lt&&rt<=qy)
+	{
+		addtag(cur,lt,rt,val);
+		return ;
+	}
+	pushdown(cur,lt,rt);
+	int mid=(lt+rt)>>1;
+	update(cur<<1,lt,mid,qx,qy,val);
+	update((cur<<1)+1,mid+1,rt,qx,qy,val);
+	pushup(cur);
+	return ;
+}
+```
+#### 树状数组（by `tmp_get_zip_diff`）
+```cpp
+inline int lowbit(int x){
+	return x&-x;
+}
+inline int query(int x){
+	int sum=0;
+	while(x!=0)
+	{
+		sum+=tree[x];
+		x-=lowbit(x);
+	}
+	return sum;
+}
+inline void update(int x,int val){
+	while(x<=n)
+	{
+		tree[x]+=val;
+		x+=lowbit(x);
+	}
+	return ;
+}
+```
+### 求某整数二进制$1$的个数
+```cpp
+__builtin_popcount()
+```
+### 排序算法
+#### 快速排序（by `jjl_cxk`）
+```cpp
+void k_sort(int l,int r)
+{
+	int i,j,mid,p;
+	i=l,j=r;
+	mid=a[(l+r)/2];
+	do
+	{
+		while(a[i]<mid)	i++;
+		while(a[j]>mid)	j--;
+		if(i<=j)
+		{
+			swap(a[i],a[j]);
+			i++,j--;
+		}
+	}while(i<=j);
+	if(l<j)	k_sort(l,j);
+	if(i<r) k_sort(i,r);
+}
+```
+#### 冒泡排序（by `jjl_cxk`）
+```cpp
+void m_sort(int l,int r)
+{
+	for(int i=r;i>l;i--)
+		for(int j=l;j<i;j++)
+			if(a[j]>a[j+1]) swap(a[j],a[j+1]);
+}
+```
+#### 归并排序（by `jjl_cxk`）
+```cpp
+void g_sort(int l,int r)
+{
+	if (l>=r)
+		return;
+	int mid=l+r>>1;
+	g_sort(l,mid);
+	g_sort(mid+1,r);
+	int i=l,j=mid+1,k=0;
+	while (i<=mid&&j<=r)
+		if (a[i]<=a[j])
+			tmp[k++]=a[i++];
+		else
+			tmp[k++]=a[j++];
+	while (i<=mid)
+		tmp[k++]=a[i++];
+	while (j<=r)
+		tmp[k++]=a[j++];
+	for (int i=l,j=0;i<=r;i++)
+		a[i]=tmp[j++]; 
+}
+```
+### 高精度
+#### 高精度（by `jjl_cxk`）
+```cpp
+char a1[10100],b1[10100];
+int a[10100],b[10100],c[4000005],lena,lenb,lenc,i,x;
+char temp[10100],f;
+```
+##### 高精加
+```cpp
+void gaojia()
+{
+	memset(a,0,sizeof(a));
+	memset(b,0,sizeof(b));
+	memset(c,0,sizeof(c));
+	cin>>a1>>b1;
+	lena=strlen(a1);
+	lenb=strlen(b1);
+	for(i=0;i<=lena-1;i++)	a[lena-i]=a1[i]-48;
+	for(i=0;i<=lenb-1;i++)	b[lenb-i]=b1[i]-48;
+	lenc=max(lena,lenb);
+	x=0;
+	for(i=1;i<=lenc;i++)
+	{
+		c[i]=a[i]+b[i]+x;
+		x=c[i]/10;
+		c[i]%=10;
+	}
+	if(x!=0)
+	lenc++,c[lenc]=x;
+	for(i=lenc;i>=1;i--)
+		cout<<c[i];
+}
+```
+##### 高精减
+```cpp
+void gaojian()
+{
+	cin>>a1>>b1;
+	if(strlen(a1)<strlen(b1)||(strlen(a1)==strlen(b1)&&strcmp(a1,b1)<0))
+	{
+		strcpy(temp,a1);
+		strcpy(a1,b1);
+		strcpy(b1,temp);
+		f='-';
+	}
+	lena=strlen(a1);
+	lenb=strlen(b1);
+	for(i=0;i<=lena-1;i++)	a[lena-i]=a1[i]-48;
+	for(i=0;i<=lenb-1;i++)	b[lenb-i]=b1[i]-48;
+	lenc=lena;
+	for(i=1;i<=lenc;i++)
+	{
+		if(a[i]<b[i])
+		{
+			a[i]+=10;
+			a[i+1]--;
+		}
+		c[i]cheng=a[i]-b[i];
+	}
+	while(c[lenc]==0&&lenc>1)	lenc--;
+	if(f=='-')	cout<<"-";
+	
+}
+```
+##### 高精乘
+```cpp
+void gaocheng(char a1,char b1)
+{
+	//cin>>a1>>b1;
+	lena=strlen(a1);
+	lenb=strlen(b1);
+	for(i=0;i<=lena-1;i++)	a[lena-i]=a1[i]-48;
+	for(i=0;i<=lenb-1;i++)	b[lenb-i]=b1[i]-48;
+	for(i=1;i<=lena;i++)
+	{
+		x=0;
+		for(int j=1;j<=lenb;j++)
+		{
+			x=a[i]*b[j]+x/10+c[i+j-1];
+			c[i+j-1]=x%10;
+		}
+		c[i+lenb]=x/10;
+	}
+	lenc=lena+lenb;
+	while(c[lenc]==0&&lenc>1)	lenc--;
+	for(i=lenc;i>=1;i--)
+		cout<<c[i];
+}
+```
+#### 高精度结构体（不完整）
+```cpp
+// 高精度结构体 
+template<int MAXSIZE, typename TY = short>
+struct hipr {
+	int uslen = 0;	//已使用的长度，未使用为0 
+	TY num[MAXSIZE]{ 0 };	//高精度数的实际存储数组 
+	bool _pos = 1, __flag;	//数的正负 1为正，0为负 
+	void erazero() {	//去前导0 
+		while (!num[uslen] && uslen > 1)	uslen--;
+	}
+	void print(const char* Fmt) {	//打印，`%`打印这个数字 
+		for (int i = 0; i < strlen(Fmt); i++) //遍历格式数组 
+			if (Fmt[i] == '%')	//打印这个数 
+			{
+				if (!_pos)	putchar('-');	//负数 
+				for (int j = uslen; j > 0; j--)	putchar(num[j] + '0');
+			}
+			else putchar(Fmt[i]);	//没有遇到 `%` 的情况 
+	}
+	void hipin(string s) {	//string输入
+		uslen = s.size();	//已使用的长度
+		if (s[0] == '-')	_pos = 0, __flag = 1;	//负数 
+		for (int i = (__flag ? --uslen : uslen - 1), j = 1; i >= __flag; i--, j++)
+			num[j] = s[i] ^ 48;	//可用 `-'0'` 代替 
+	}
+};
+```
+##### 高精加（只能输入正数）
+```cpp
+template<int MAXSIZE, typename TY>
+void hiadd(hipr<MAXSIZE,TY>* a, hipr<MAXSIZE,TY>* b, hipr<MAXSIZE,TY>* ans) {
+	ans->uslen = max(a->uslen, b->uslen) + 1;
+	TY x = 0;
+	for (int i = 1; i <= ans->uslen; i++)
+	{
+		ans->num[i] = (a->num[i] + b->num[i] + x) % 10;
+		x = (a->num[i] + b->num[i] + x) / 10;
+	}
+	ans->erazero();
+}
+```
+##### 高精乘（只能输入正数)
+```cpp
+template<int MAXSIZE, typename TY>
+void himulti(hipr<MAXSIZE,TY>* a, hipr<MAXSIZE,TY>* b, hipr<MAXSIZE,TY>* ans) {
+	ans->uslen = a->uslen + b->uslen;
+	for (int i = 1; i <= a->uslen; i++)
+	{
+		for (int j = 1; j <= b->uslen; j++)	ans->num[i + j - 1] += a->num[i] * b->num[j];
+		for (int j = 1; j <= ans->uslen; j++)
+		{
+			ans->num[j + 1] += ans->num[j] / 10;
+			ans->num[j] %= 10;
+		}
+	}
+	ans->erazero();
+}
 ```
