--- a/docs/有意思的东西/小工具.md
+++ b/docs/有意思的东西/小工具.md
@@ -245,10 +245,22 @@ void print(int x){
 }
 ```
 
-### 火车头
-#### （by `zibenlun`）
+### Header
+#### 关闭同步流（by `zibenlun`）
 ```cpp
 #define yuanshen ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+```
+#### $10^{12} \text{kg}$（by `zrl123456`）
+```cpp
+#include<bits/stdc++.h>
+#define int long long
+#define inl inline
+#define INF LLONG_MAX
+#define rep(i,x,y) for(int i=x;i<=y;++i)
+#define rer(i,x,y,cmp) for(int i=x;i<=y&&cmp;++i)
+#define per(i,x,y) for(int i=x;i>=y;--i)
+#define FAST ios::sync_with_stdio(0);cin.tie(0);cout.tie(0);
+#define endl '\n'
 ```
 
 ## 模板类
@@ -320,7 +332,7 @@ inline void get_prime(int Mx){
 	return ;
 }
 ```
-### 火车头函数（by `stostostoorzorzorz`）
+### 数学函数（by `stostostoorzorzorz`）
 ```cpp
 long long mod(long long x,long long p) { return x-(x/p)*p; }
 long long r(long long a,long long b) { return mod( (long long)(rand()*rand()) , b-a+1)+a; }
