--- a/docs/cdn/README
+++ b/docs/cdn/README
@@ -1,3 +1,8 @@
 -------------------- /cdn/ ------------------------
 
-该目录存放的是小站上的文件，存放图片，引用方式如洛谷图床。
+* 该目录存放的是小站上的文件，存放图片，引用方式如洛谷图床。
+
+* 文件结构
+
+.
+·-- README          说明及文件目录
