--- a/docs/cdn/README
+++ b/docs/cdn/README
@@ -5,4 +5,7 @@
 * 文件结构
 
 .
-·-- README          说明及文件目录
+|-- README          说明及文件目录
+|-- eso0932a.jpg    洛谷主题背景图
+|-- eso1625a.jpg    洛谷主题背景图
+`-- index.jpg       主页图片
